--- a/JUN-tong/JUN-tong/Base.lproj/Main.storyboard
+++ b/JUN-tong/JUN-tong/Base.lproj/Main.storyboard
@@ -395,12 +395,18 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="제대로通(통)한다" id="xkG-o5-4Bn">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="5BS-aB-Zw3"/>
+                        <barButtonItem key="rightBarButtonItem" image="reset" id="5BS-aB-Zw3">
+                            <color key="tintColor" red="0.0" green="0.17254901959999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="resetData:" destination="BYZ-38-t0r" id="sPa-aC-Z5t"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="activeIndicator" destination="czl-rq-k7o" id="8rp-1z-gUG"/>
                         <outlet property="cityBusInfo" destination="oyo-k7-wYP" id="Iwb-ta-lah"/>
+                        <outlet property="cityBusInfoHeight" destination="hDu-J0-qgA" id="edx-U5-Qan"/>
                         <outlet property="cityBusMain" destination="8zJ-Db-oH5" id="b7v-cM-rnf"/>
                         <outlet property="cityBusTable" destination="JZF-et-4Qs" id="Sxs-P7-FU6"/>
                         <outlet property="cityBusTableHeight" destination="2dy-XZ-DB7" id="xJr-tv-lPG"/>
@@ -425,6 +431,7 @@
     <resources>
         <image name="blackHeart" width="15" height="14"/>
         <image name="redHeart" width="15" height="14"/>
+        <image name="reset" width="19" height="19"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="U5d-bC-N1N"/>
